--- a/WorkFlowMySql/Properties/Resources.resx
+++ b/WorkFlowMySql/Properties/Resources.resx
@@ -118,10 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="518163-636213663522901785-16x9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\518163-636213663522901785-16x9.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="main-qimg-0a4a89cb00ef290cf45c1a0e468a6b30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\main-qimg-0a4a89cb00ef290cf45c1a0e468a6b30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="518163-636213663522901785-16x9" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\518163-636213663522901785-16x9.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="SaaS-Help-Desk-Software-Comparison" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SaaS-Help-Desk-Software-Comparison.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="join-us_banner1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\join-us_banner1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
