--- a/WorkFlowMySql/Properties/Resources.resx
+++ b/WorkFlowMySql/Properties/Resources.resx
@@ -124,10 +124,13 @@
   <data name="main-qimg-0a4a89cb00ef290cf45c1a0e468a6b30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\main-qimg-0a4a89cb00ef290cf45c1a0e468a6b30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="join-us_banner1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\join-us_banner1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SaaS-Help-Desk-Software-Comparison" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SaaS-Help-Desk-Software-Comparison.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="join-us_banner1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\join-us_banner1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Problems-How" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Problems-How.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
