--- a/WorkFlowMySql/Properties/Resources.resx
+++ b/WorkFlowMySql/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="518163-636213663522901785-16x9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\518163-636213663522901785-16x9.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Problems-How" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Problems-How.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="main-qimg-0a4a89cb00ef290cf45c1a0e468a6b30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\main-qimg-0a4a89cb00ef290cf45c1a0e468a6b30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,7 +133,7 @@
   <data name="SaaS-Help-Desk-Software-Comparison" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SaaS-Help-Desk-Software-Comparison.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Problems-How" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Problems-How.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="modern-login-form_1017-7975" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\modern-login-form_1017-7975.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
